--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
   <!--                   Google Analytics einbinden                   -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-41488990-1">
 	</script>
 	<script>
   	window.dataLayer = window.dataLayer || [];
